--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,10 +12,14 @@
 
 
 {{#each postagens}}
-<div class="card">
+<div class="card class mt-4">
     <div class="card-body">
         <h3>{{titulo}}</h3>
         <p>{{descricao}}</p>
+        <a href="/postagem/{{slug}}"><button class="btn btn-success">Leia mais</button></a>
+        <hr>
+        <small>{{categoria.nome}}</small>
+        <small>Data de publicação: {{data}}</small>
     </div>
 </div>
 {{else}}
