--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,12 @@
-<div class="bg-light p-5 rounded-lg m-3">
-  <h1 class="display-4">Bem-vindo ao blog do Node</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+<div class="jumbotron bg-light p-5 rounded-lg m-3">
+  <h1 class="display-4">Bem-vindo ao Blog NodeJS</h1>
+  <p class="lead">O lugar perfeito para explorar conteúdos incríveis sobre tecnologia, programação, inovação e muito mais.</p>
   <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-  <a class="btn btn-primary btn-lg" href="#" role="button">Crie uma conta</a>
+  <p>Navegue pelas nossas postagens e descubra insights valiosos, tutoriais práticos e as últimas novidades do mundo da tecnologia.</p>
+  <a class="btn btn-primary btn-lg" href="/usuarios/registro" role="button">Crie sua conta agora</a>
 </div>
-
 <hr>
+
 
 <h2>Postagens recentes: </h2>
 
