--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -1,21 +1,26 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid"> 
-    <a class="navbar-brand" href="/">Blog do Node</a>
+    <a class="navbar-brand" href="/">Blog NodeJS</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
+          <a class="nav-link active" aria-current="page" href="/">Início</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/categorias">Categorias</a>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Registro</a>
+          {{#if user}}
+          <a class="nav-link" aria-disabled="true" href="/usuarios/logout">Sair</a>
+          {{else}}
+          <a class="nav-link" aria-disabled="true" href="/usuarios/login">Entrar</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-disabled="true" href="/usuarios/registro" >Registrar-se</a>
+           {{/if}}
         </li>
       </ul>
     </div>
